# ActixBase

./: .env.dev  .env.prod  Cargo.toml  README.md  build.rs  cargo-generate.toml
src/: config.rs  logger.rs  main.rs
src/api/: mod.rs  ping.rs
